--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,14 @@
 .top-bar{
-    border: 2px solid black;
     background-color: grey;
     height: 35px;
 
 }
 header{
-    border: 2px solid black;
-    height: 300px;
+   background-color: black;
+     height: 300px;
 
 }
-body{
-    border: 1px solid black;
+body {
   margin: 0;
 
 }
@@ -19,10 +17,16 @@ body{
     color: white;
     font-size: 14px;
 }
-nav{
-    border: 2px solid black;
+nav {
     background-color: black;
     height: 60px;
     margin: 0;
 
+}
+.paragraf{
+display: flex;
+justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-size: 30px;
 }
