--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 header{
    background-color: black;
-     height: 300px;
+     height: 150px;
 
 }
 body {
@@ -29,4 +29,21 @@ justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     font-size: 30px;
+}
+.Picture1{
+    width: 100%;
+}
+.container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 40px;
+}
+.Picture2{
+    width: 99%;
+    margin-left: 0;
+}
+.Picture3{
+    width: 99%;
+    margin-left: 10px;
 }
