--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,12 @@ justify-content: center;
     width: 99%;
     margin-left: 10px;
 }
+.container1{
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+}
+.photo-bar{
+    width: 60%;
+    padding-left: 70px;
+}
