--- a/styles.css
+++ b/styles.css
@@ -96,3 +96,16 @@ section{
     text-align: center;
    
 }
+.container2{
+    display: flex;
+    flex-direction: row;
+    height: 400px;
+    width: 100%;
+    border: solid black 1px;
+
+}
+.image2{
+    width:100%;
+    height: 300px;
+
+}
