Adding more content

--- a/styles.css
+++ b/styles.css
@@ -99,13 +99,64 @@ section{
 .container2{
     display: flex;
     flex-direction: row;
-    height: 400px;
+    height: 300px;
     width: 100%;
-    border: solid black 1px;
+    border: solid white 1px;
+   
 
 }
 .image2{
     width:100%;
     height: 300px;
+
+}
+.container7{
+border: 1px solid white;
+width: 100%;
+height: 60px;
+}
+.logo {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    width: 200px;
+    height: auto;
+}
+.container8{
+    padding-top: 0;
+    display: flex;
+    flex-direction: row;
+    padding-right: 10%;
+
+}
+.text2{
+    width: 50%;
+    justify-content: flex-start;
+    margin-top: 0;
+    margin-right: 30%;
+}
+.text3{
+    width: 50%;
+    justify-content: flex-end;
+    top: 0;
+}
+.text4{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 25px;
+    text-align: center;
+
+}
+.text5{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 30px;
+    text-align: center;
+
+}
+.link {
+    text-decoration: none;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    text-align: center;
 
 }
