--- a/styles.css
+++ b/styles.css
@@ -161,13 +161,46 @@ height: 60px;
 
 }
 .container4{
-    border: 1px solid black;
     width: 100%;
     height: 600px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    padding-top: 5%;
 }
 .image3{
-    width: 80%;
+    width: 100%;
+    height: 100%;
+}
+.small-photos {
+    width: 95%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-bottom: 0;
+
+}
+.text4 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    text-align: start;
+    margin-left: 5%;
+    padding-top: 5%;
+}
+hr {
+    margin-left: 3%;
+    margin-right: 3%;
+}
+.text5{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 12px;
+    text-align: center;
+}
+.text6{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    text-align: center;
 }
