--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,8 @@ section{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    padding-top:5%;
+    padding-bottom: 5%;
 }
 .text{
     font-family: sans-serif;
@@ -193,11 +195,13 @@ height: 60px;
 hr {
     margin-left: 3%;
     margin-right: 3%;
+    color: grey;
 }
 .text5{
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 12px;
     text-align: center;
+    padding-bottom: 15%;
 }
 .text6{
     font-family: Arial, Helvetica, sans-serif;
@@ -211,6 +215,8 @@ hr {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
     text-align: center;
+    padding-bottom: 2%;
+    padding-top: 5%;
 }
 .bottom-nav1{
     width: 6%;
@@ -232,4 +238,14 @@ hr {
     height: auto;
     justify-content: center;
 }
-
+.container9{
+    background-color: #F4F2F0;
+    width: 100%;
+    height: 300px;
+    padding-bottom: 5%;
+}
+.container10{
+    background-color: white;
+    width: 100%;
+    height: 500px;
+}
