--- a/styles.css
+++ b/styles.css
@@ -32,26 +32,32 @@ justify-content: center;
 }
 .Picture1{
     width: 100%;
+    
 }
 .container{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-left: 2%;
+    margin-right: 2%;
   
 
 }
 .Picture2{
     width: 100%;
+    margin-right: 2%;
    
 }
 .Picture3{
     width: 100%;
+    margin-left: 2%;
    
 }
 .container1{
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    margin-right: 5%;
  
    
 }
@@ -310,12 +316,91 @@ hr {
        
      }
     }
+
 @media  (max-width: 600px){
-   .top {
+   body {
        
- margin-left: 5%;
- margin-right: 5%;
+ margin-left: 0;
+ margin-right: 0;
     
        
      }
     }
+@media  (max-width: 600px){
+    .bar {
+    margin-left: 5%;
+         }
+        }
+
+
+ @media  (max-width: 600px){
+    section {
+               
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+        
+               
+             }
+            }
+.bar{
+margin-left: 5%;
+}
+
+@media  (max-width: 600px){
+    img.photo-bar {
+               
+  padding-left: 30%;
+  
+        
+               
+             }
+            }
+            @media  (max-width: 600px){
+                p.text {
+                           
+    
+              padding-right: 70%;
+             
+              
+                    
+                           
+                         }
+                        }
+@media  (max-width: 600px){
+.container5 {
+                               
+width: 100%;
+height: 180px;
+                        
+                               
+}
+}
+@media  (max-width: 600px){
+    .container7 {
+                                   
+    width: 100%;
+    height: 20px;
+                            
+                                   
+    }
+    }
+    @media  (max-width: 600px){
+        .container2 {
+                                       
+            display: flex;
+            flex-direction: column;
+            width: 100%;       
+                                       
+        }
+        }
+        @media  (max-width: 600px){
+            .container8 {
+                                           
+                display: flex;
+                flex-direction: column;
+                    
+                                           
+            }
+            }
+                
