--- a/styles.css
+++ b/styles.css
@@ -12,17 +12,23 @@ body {
   margin: 0;
 
 }
-.font{
+p.font{
     font-family: sans-serif;
     color: white;
     font-size: 14px;
+
 }
 nav {
     background-color: black;
     height: 60px;
     margin: 0;
-
+   
+    }
+a {
+    text-decoration: none;
 }
+
+
 .paragraf{
 display: flex;
 justify-content: center;
@@ -243,10 +249,12 @@ hr {
     justify-content: center;
 }
 .container9{
+    display: flex;
+    flex-direction: row;
     background-color: #F4F2F0;
     width: 100%;
-    height: 300px;
-    padding-bottom: 5%;
+   
+    
 }
     
 .container10{
@@ -303,8 +311,6 @@ hr {
     flex-direction: column;
     font-size: 12px;
     color: grey;
-    padding-left: 80%;
-    bottom: 2%;
 }
 @media  (max-width: 600px){
     .container {
