Mobile view margins

--- a/styles.css
+++ b/styles.css
@@ -357,8 +357,8 @@ div.bottom-nav{
 @media  (max-width: 600px){
    body {
        
-margin: 0;
-padding: 0;
+margin-left: 0%;
+margin-right: 0%;
     }
     }
 @media  (max-width: 600px){
