--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,6 @@ section{
 .text{
     font-family: sans-serif;
     text-align: center;
-    padding-left: 60px;
 }
 .image{
     display: flex;
@@ -118,9 +117,9 @@ section{
 .container2{
     display: flex;
     flex-direction: row;
-    height: 300px;
     width: 100%;
-    border: solid white 1px;
+    margin-bottom: 0%;
+    padding-bottom: 0%;
    
 
 }
@@ -145,39 +144,52 @@ height: 60px;
     padding-top: 0;
     display: flex;
     flex-direction: row;
-    padding-right: 10%;
+    justify-content: space-evenly;
 
 }
 .text2{
-    width: 50%;
-    justify-content: flex-start;
-    margin-top: 0;
-    margin-right: 30%;
+    width: 100%;
+    
+  
+
+   
 }
 .text3{
-    width: 50%;
-    justify-content: flex-end;
-    top: 0;
+    width: 100%;
+   
+    
 }
-.text4{
+h1.text4{
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 25px;
     text-align: center;
+    padding-top: 0%;
 
 }
-.text5{
+h1.text5{
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 30px;
+    font-size: 25px;
     text-align: center;
+    padding-top: 0%;
+    padding-bottom: 0%;
+  
 
 }
-.link {
+
+a.link1 {
     text-decoration: none;
     color: black;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 15px;
-    text-align: center;
+    padding-left: 35%;
 
+}
+a.link2 {
+    text-decoration: none;
+    color: black;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 15px;
+    padding-left: 30%;
 }
 .container4{
     width: 100%;
