--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,12 @@ header{
     
 
 }
+.top{
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 9px;
+   
+}
 body {
     margin-top:0%;
     margin-right: 0%;
@@ -129,7 +135,7 @@ section{
 
 }
 p.text{
-    padding-left: 27%;
+    padding-left: 2%;
 }
 .container7{
 border: 1px solid white;
@@ -529,8 +535,9 @@ height: 180px;
                                                 
                                                 }
 @media  (max-width: 600px){
-    h1, p{
-        margin-left: 20px;
+    div.text {
+        padding-top: 1%;
+        padding-bottom: 1%;
     }
 
 }
