--- a/styles.css
+++ b/styles.css
@@ -541,6 +541,13 @@ height: 180px;
     }
 
 }
+@media  (max-width: 600px){
+    img.logo {
+        padding-left: 5%;
+        
+    }
+
+}
     
 
                            
