--- a/styles.css
+++ b/styles.css
@@ -575,5 +575,5 @@ div.top-img{
 
 }
 nav.navbar{
-    background-color: url(https://i.pinimg.com/736x/4c/73/54/4c7354ec6ff57293af3dce7eae20b49e.jpg);
+    background-color: pink;
 }
