--- a/styles.css
+++ b/styles.css
@@ -178,19 +178,23 @@ height: 60px;
    
     
 }
+
+
 h1.text4{
     font-family: sans-serif;
-    font-size: 25px;
-    text-align: center;
+    font-size: 20px;
+    text-align: start;
     padding-top: 0%;
+    padding-left: 7%;
 
 }
 h1.text5{
     font-family: sans-serif;
     font-size: 25px;
-    text-align: center;
+    text-align: start;
     padding-top: 0%;
     padding-bottom: 0%;
+    padding-left: 7%;
   
 
 }
@@ -199,16 +203,16 @@ a.link1 {
     text-decoration: none;
     color: black;
     font-family: sans-serif;
-    font-size: 15px;
-    padding-left: 35%;
+    font-size: 25px;
+    padding-left: 7%;
 
 }
 a.link2 {
     text-decoration: none;
     color: black;
     font-family: sans-serif;
-    font-size: 15px;
-    padding-left: 30%;
+    font-size: 25px;
+    padding-left: 12%;
 }
 .container4{
     width: 100%;
@@ -513,9 +517,10 @@ height: 180px;
                                 @media  (max-width: 600px){
                                     h1.text4 {
                                                                    
-                                margin-top: 5%;
-                                margin-left: 2%;
-                                margin-right: 2%;
+                               text-align: center;
+                               padding-left: 3%;
+                               padding-right: 3%;
+                               margin: 0;
                                 font-family: sans-serif;
                     
                                             
@@ -525,7 +530,9 @@ height: 180px;
                                     @media  (max-width: 600px){
                                         a.link1 {
                                                                        
-                                   padding-left: 43%;
+                                  display: none;
+                                   
+                                
                         
                                                 
                                                                        
@@ -534,6 +541,7 @@ height: 180px;
                                         @media  (max-width: 600px){
                                             a.link2 {
                                                 padding-left: 40%;
+                                               
                                                                            
                                        
                                                     
@@ -556,9 +564,9 @@ height: 180px;
 
 }
 @media  (max-width: 600px){
-    p, h1 {
+    h1 {
         font-family: sans-serif;
-        
+       
     }
 
 }
@@ -577,3 +585,23 @@ div.top-img{
 nav.navbar{
     background-color: pink;
 }
+@media  (max-width: 600px){
+    h1.text5 {
+                                 
+        text-align: center;
+        padding: 0;
+        margin-bottom: 2%;
+        margin-top: 2% ;
+        
+            
+                                   
+    }
+    }
+    @media  (max-width: 600px){
+        p.text5 {
+                                     
+          display: none;
+                
+                                       
+        }
+        }
