--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,9 @@ html, body {
     height: inherit;
 }
 
-    
+   div.cont{
+    background-color: white;
+   } 
 
 
 header{
@@ -292,7 +294,11 @@ img.bottom-nav1{
 div.bottom-nav{
     text-size-adjust: 16px;
     text-overflow: inherit;
+    padding-top: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
 }
+
 .bottom-nav1{
     width: 6%;
     height: auto;
