--- a/styles.css
+++ b/styles.css
@@ -277,6 +277,7 @@ hr {
 }
 h1.bottom-nav{
     width: 60%;
+    margin-left: 2%;
 
 }
 p.bottom-nav{
@@ -337,6 +338,7 @@ div.bottom-nav{
     background-color: #F4F2F0;
     width: 100%;
    
+   
     
 }
 .bar{
@@ -394,12 +396,21 @@ div.bottom-nav{
     width: 20%;
     font-size: 12px;
     color: grey;
+    
 }
 .container13{
     display: flex;
     flex-direction: column;
     font-size: 12px;
     color: grey;
+}
+div.container12{
+    padding-left: 5%;
+    padding-top: 1%;
+}
+div.container13{
+    padding-left: 7%;
+    padding-top: 2%;
 }
 @media  (max-width: 600px){
     .container {
@@ -610,6 +621,8 @@ nav.navbar{
         padding: 0;
         margin-bottom: 2%;
         margin-top: 2% ;
+        margin-left: 0;
+        margin-right: 0;
         
             
                                    
