--- a/styles.css
+++ b/styles.css
@@ -357,7 +357,7 @@ div.social-icons {
     display: grid;
     font-size: 3rem;
     grid-template-columns: repeat(5, 1fr);
-    padding-left: 40%;
+   padding-top: 10%;
    
    
   }
