--- a/styles.css
+++ b/styles.css
@@ -414,158 +414,105 @@ margin-right: 0%;
     display: flex;
     flex-direction: column;
     width: 100%;
-        
-               
-             }
-            }
+}
+}
 
 @media  (max-width: 600px){
     img.photo-bar {
                
   padding-left: 30%;
-  
-        
-               
-             }
-            }
+}
+}
  @media  (max-width: 600px){
 p.text {
 padding: 0%;
 margin-left: 15%;
-
-    }
+}
 }
 @media  (max-width: 600px){
 .container5 {
                                
 width: 100%;
 height: 180px;
-                        
-                               
 }
 }
 @media  (max-width: 600px){
     .container7 {
                                    
-    width: 100%;
-    height: 20px;
-                            
-                                   
-    }
-    }
-    @media  (max-width: 600px){
-        .container2 {
-                                       
-            display: flex;
-            flex-direction: column;
-            width: 100%;       
-                                       
-        }
-        }
-        @media  (max-width: 600px){
-            .container8 {
-                                           
-                display: flex;
-                flex-direction: column;
-                    
-                                           
-            }
-            }
-            @media  (max-width: 600px){
-                img.image2 {
-                                               
-            
-                    height: 100%;
-                        
-                                               
-                }
-                }
-                @media  (max-width: 600px){
-                    p.text4 {
-                                                   
-                margin-left: 5%;
-                padding: 0;
-    
-                            
-                                                   
-                    }
-                    }
-                    @media  (max-width: 600px){
-                        h1.text4 {
-                                                       
-                    margin-top:200px;
-        
-                                
-                                                       
-                        }
-                        }
-                        @media  (max-width: 600px){
-                            a.link {
-                                                           
-                        padding-left: 10%;
-                        font-size:10vw;
-            
-                                    
-                                                           
-                            }
-                            }
-                            @media  (max-width: 600px){
-                                img.Picture3 {
-                                                               
-                            margin: 0%;
-                
-                                        
-                                                               
-                                }
-                                }
-                                @media  (max-width: 600px){
-                                    h1.text4 {
-                                                                   
-                               text-align: center;
-                               padding-left: 3%;
-                               padding-right: 3%;
-                               margin: 0;
-                                font-family: sans-serif;
-                    
-                                            
-                                                                   
-                                    }
-                                    }
-                                    @media  (max-width: 600px){
-                                        a.link1 {
-                                                                       
-                                  display: none;
-                                   
-                                
-                        
-                                                
-                                                                       
-                                        }
-                                        }
-                                        @media  (max-width: 600px){
-                                            a.link2 {
-                                                padding-left: 40%;
-                                               
-                                                                           
-                                       
-                                                    
-                                                                           
-                                            }
-                                            }
-                                           
-@media  (max-width: 600px){
-    div.text {
-        padding-top: 1%;
-        padding-bottom: 1%;
-    }
-
+ width: 100%;
+height: 20px;
+}
 }
 @media  (max-width: 600px){
-    img.logo {
-        padding-left: 5%;
-        
-    }
-
+ .container2 {
+display: flex;
+flex-direction: column;
+width: 100%;       
+}
+}
+ @media  (max-width: 600px){
+.container8 {
+ display: flex;
+flex-direction: column;
+}
+}
+@media  (max-width: 600px){
+ img.image2 {
+height: 100%;
+}
+}
+@media  (max-width: 600px){
+p.text4 {
+margin-left: 5%;
+padding: 0;
+}
+}
+@media  (max-width: 600px){
+h1.text4 {
+margin-top:200px;
+}
+}
+ @media  (max-width: 600px){
+a.link {
+padding-left: 10%;
+font-size:10vw;
+}
+}
+@media  (max-width: 600px){
+img.Picture3 {
+margin: 0%;
+}
+}
+@media  (max-width: 600px){
+h1.text4 {
+text-align: center;
+padding-left: 3%;
+padding-right: 3%;
+margin: 0;
+font-family: sans-serif;
+}
+}
+@media  (max-width: 600px){
+a.link1 {                                                                      
+display: none;
+}
+}       
+@media  (max-width: 600px){
+ a.link2 {
+padding-left: 40%;
+}
+ }
+                                           
+@media  (max-width: 600px){
+div.text {
+ padding-top: 1%;
+padding-bottom: 1%;
+}
+}
+@media  (max-width: 600px){
+img.logo {
+padding-left: 5%;
+}
 }
 @media  (max-width: 600px){
     h1 {
@@ -592,22 +539,23 @@ nav.navbar{
 @media  (max-width: 600px){
     h1.text5 {
                                  
-        text-align: center;
-        padding: 0;
-        margin-bottom: 2%;
-        margin-top: 2% ;
-        margin-left: 0;
-        margin-right: 0;
-        
-            
-                                   
-    }
-    }
-    @media  (max-width: 600px){
-        p.text5 {
-                                     
-          display: none;
+text-align: center;
+padding: 0;
+ margin-bottom: 2%;
+margin-top: 2% ;
+margin-left: 0;
+margin-right: 0;
+}
+}
+@media  (max-width: 600px){
+p.text5 {
+display: none;
+}
+}
+@media  (max-width: 600px){
+    .inline {
                 
-                                       
-        }
-        }
+        margin-left: 0%;
+
+             }
+             }
